<resources>
    <string name="app_name">QUEBO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo_edit">PhotoEditActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_image_desc">crop result</string>

    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>

    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>
    <string name="title_activity_photo_editing">PhotoEditingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
